<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetEnd="20dp"
        app:contentInsetStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/ic_edit_text"
            android:gravity="center"
            android:hint="@string/search_artist"
            android:inputType="textNoSuggestions"
            android:padding="8dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBody"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cvIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItems"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1"
            tools:listitem="@layout/adapter_main" />

        <include
            android:id="@+id/viewLoading"
            layout="@layout/view_shimmer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvIndicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:cardBackgroundColor="?colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clBody"
        app:layout_constraintVertical_weight="0.15">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/tvProgress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="1">

                <ImageButton
                    android:id="@+id/ivPrev"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_baseline_skip_previous_24"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/ivPlay"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_baseline_play_arrow_24"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/ivPause"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_baseline_pause_24"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/ivNext"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_baseline_skip_next_24"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="00:00/00:00"
                android:textSize="10dp"
                app:layout_constraintBottom_toTopOf="@id/sbProgress"
                app:layout_constraintEnd_toEndOf="@id/llButton"
                app:layout_constraintStart_toStartOf="@id/llButton"
                app:layout_constraintTop_toBottomOf="@id/llButton"
                app:layout_constraintVertical_weight="1"
                tools:ignore="HardcodedText,SpUsage" />

            <SeekBar
                android:id="@+id/sbProgress"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/llButton"
                app:layout_constraintHorizontal_weight="3.5"
                app:layout_constraintStart_toStartOf="@id/llButton"
                app:layout_constraintTop_toBottomOf="@id/tvProgress"
                app:layout_constraintVertical_weight="1.4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>